fix height hero on small desktop height

--- a/src/styles/components/queries.scss
+++ b/src/styles/components/queries.scss
@@ -113,9 +113,6 @@
             transform:inherit;
         }
     }
-    .hero-content {
-        margin-top:50px;
-    }
     .content {
         max-width: 433px;
         display: inline-block;
@@ -142,6 +139,9 @@
     }
     .hero-content {
         margin-left:300px;
+        position: absolute;
+        top:50%;
+        transform: translateY(-50%);
     }
     .background {
         &--hero {
